--- a/css/styles.css
+++ b/css/styles.css
@@ -49,6 +49,8 @@ body {
   }
   ul{
     list-style-type: none;
+    margin:0;
+    padding: 0;
   }
   .nav-list {
     display: flex;
@@ -279,6 +281,7 @@ body {
     color: #F4F4FD;
     letter-spacing: 0.02em;
     line-height: 1.5;
+    max-width: 264px;
   }
   
   .footer-logo {
@@ -290,6 +293,7 @@ body {
     text-transform: uppercase;
     color: #4d5ae5;
     text-decoration: none;
+    display: block;
     display: inline-block;
     margin-bottom: 16px;
   }
@@ -297,6 +301,4 @@ body {
   .footer-logo .logo-span {
     color: #f4f4fd;
   }
-  .footer .text {
-    max-width: 264px;
-  }
+  
