--- a/css/styles.css
+++ b/css/styles.css
@@ -206,7 +206,7 @@ body {
   border-radius: 0px 0px 4px 4px;
   background-color: #ffffff;
   }
-  .person-item .container {
+  .person-item_container {
     padding: 32px 0;
   }
   
