--- a/css/styles.css
+++ b/css/styles.css
@@ -206,7 +206,7 @@ body {
   border-radius: 0px 0px 4px 4px;
   background-color: #ffffff;
   }
-  .person-item_container {
+  .list-item_container {
     padding: 32px 0;
   }
   
@@ -251,7 +251,7 @@ body {
     width: calc((100% - 48px) / 3);
   }
 
-  .forth-section_list_item-container {
+  .forth-section_list-item-container {
     padding: 32px 16px;
     border: 1px solid #e7e9fc;
     border-top: none;
